--- a/configuration-template/instancename/etc/rabbitmq.config
+++ b/configuration-template/instancename/etc/rabbitmq.config
@@ -3,7 +3,7 @@
     {rabbit, [ {auth_mechanisms, ['PLAIN', 'AMQPLAIN', 'EXTERNAL']},
                {default_vhost, <<"instancename">>},
                {default_user, <<"admin">>},
-               {default_password, <<"pwd">>},
+               {default_pass, <<"password">>},
                {default_permissions, [<<".*">>, <<".*">>, <<".*">>]},
                {tcp_listeners, [5672]}, 
                {ssl_listeners, [5673]},
